--- a/src/components/footer/_footer.pug
+++ b/src/components/footer/_footer.pug
@@ -8,7 +8,7 @@ footer.footer
           +svgMono('logo')
         .footer__address
           .footer__address-title МЫ НАХОДИМСЯ ТУТ
-          .footer__address-content 109202, г. Москва, 2-я Карачаровская ул., д. 3
+          a.footer__address-content(href="/contacts.html") 109202, г. Москва, 2-я Карачаровская ул., д. 3
         .footer__developer
           a(href="#" target="_blank") Создание сайта – Студия NetLab
 
