--- a/src/components/contacts/_contacts.pug
+++ b/src/components/contacts/_contacts.pug
@@ -42,7 +42,7 @@
 
           .contacts__select(data-select="select-1")
             select(js-select)
-              option(value="val1-0") Ваш регион (Фед.)
+              option(value="val0") Ваш регион (Фед.)
               option(value="val1-1") СНГ (Фед.)
               option(value="val1-2") ЦФО (Фед.)
               option(value="val1-3") СЗФО (Фед.)
@@ -51,7 +51,7 @@
 
           .contacts__select(data-select="select-2")
             select(js-select)
-              option(value="val2-0") Ваш регион (Лок.)
+              option(value="val0") Ваш регион (Лок.)
               option(value="val2-1") СНГ (Лок.)
               option(value="val2-2") ЦФО (Лок.)
               option(value="val2-3") СЗФО (Лок.)
@@ -60,7 +60,7 @@
 
           .contacts__select(data-select="select-3")
             select(js-select)
-              option(value="val3-0") Ваш регион (Дист.)
+              option(value="val0") Ваш регион (Дист.)
               option(value="val3-1") СНГ (Дист.)
               option(value="val3-2") ЦФО (Дист.)
               option(value="val3-3") СЗФО (Дист.)
