--- a/src/components/contacts/_contacts.sass
+++ b/src/components/contacts/_contacts.sass
@@ -56,6 +56,10 @@
       margin: 14px 0 0
       font-size: 16px
       line-height: 22px
+      transition: all .25s $ease
+    a
+      &:hover
+        color: $colorPrimary
 
   &__icon
     font-size: 0
