--- a/src/components/production/_graph.sass
+++ b/src/components/production/_graph.sass
@@ -32,7 +32,7 @@
       content: ''
       left: 2px
       top: -3px
-      background: $colorPrimary
+      background: #D0021B
     p
       font-size: 18px
       line-height: 28px
@@ -50,19 +50,21 @@
 
     &:nth-of-type(5)
       top: 256px
-      left: 129px
+      left: 899px
 
     &:nth-of-type(6)
       top: 256px
-      left: 385px
-
-    &:nth-of-type(7)
-      top: 256px
       left: 642px
 
-    &:nth-of-type(8)
+    &:nth-of-type(7)
+
       top: 256px
-      left: 899px
+      left: 385px
+
+    &:nth-of-type(8)
+
+      top: 256px
+      left: 129px
 
     &:nth-of-type(9)
       top: 513px
@@ -84,6 +86,8 @@
       .production__graph-icon
         .ico
           font-size: 102px
+          max-width: 135px
+          width: auto
 
 
 
@@ -93,6 +97,9 @@
     margin-top: 7px
     .ico
       font-size: 80px
+      line-height: 0
+      max-width: 80px
+      width: 100%
 
 
 +r($hd)
@@ -116,13 +123,13 @@
       &:nth-of-type(4)
         left: 581px
       &:nth-of-type(5)
-        left: 1px
-      &:nth-of-type(6)
-        left: 194px
-      &:nth-of-type(7)
-        left: 387px
-      &:nth-of-type(8)
         left: 677px
+      &:nth-of-type(6)
+        left: 387px
+      &:nth-of-type(7)
+        left: 194px
+      &:nth-of-type(8)
+        left: 1px
       &:nth-of-type(9)
         left: 97px
       &:nth-of-type(10)
