--- a/src/components/production/_info.pug
+++ b/src/components/production/_info.pug
@@ -16,6 +16,9 @@
       .today__item(data-aos="fade-up" data-aos-delay="400")
         p.today__item-title 84
         p.today__item-sub-title работников
+
+.production
+  .container.container--team.container--lg-full
     .cooperation__row.cooperation__row--reverse
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
@@ -32,7 +35,7 @@
     .cooperation__row
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
-          +svgColor('icon-production')
+          +svgColor('icon-production-2')
         p.cooperation__info-main
           span Производство компании построено на прочной инфраструктурной базе
           | , которая среди прочего включает в себя не имеющую аналогов систему охлаждения пресс-форм, систему автоматической подачи сырья, надежное энергообеспечение.
