--- a/src/components/today/_team.sass
+++ b/src/components/today/_team.sass
@@ -111,18 +111,18 @@
 
 +r($md)
   .team
+    padding-bottom: 44px
     &__grid
       margin: -10px -4px 0
       width: calc(100% + 8px)
     &__col
       padding: 4px
       width: 50%
+      &:nth-child(2)
+        margin-bottom: 24px
       &--2
         width: 100%
         margin-bottom: 0
-        &:last-of-type
-          margin-bottom: 25px
-          display: none
         &::before
           left: 4px
           bottom: 4px
