--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -79,6 +79,9 @@ body, html
     &--team
       max-width: 870px
 
+    &--lg-full
+      max-width: 100%
+
 +r($lg)
   .container
     padding-left: 24px
