--- a/src/components/page-head/_page-head.sass
+++ b/src/components/page-head/_page-head.sass
@@ -11,7 +11,8 @@
     line-height: 47px
     text-align: center
     margin: 16px auto
-    max-width: 1000px
+    max-width: 900px
+    letter-spacing: 0.2px
 
 
 +r($hd)
