--- a/src/components/hero/_contactProd.pug
+++ b/src/components/hero/_contactProd.pug
@@ -1,8 +1,10 @@
 // HERO
-.hero
+.hero.hero--with-overlay
   .hero__background(data-aos="blur")
-    img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
+    video(muted loop autoplay poster="img/heroBackground_1.jpg")
+      source(src="video/cooperation1.mp4" type="video/mp4")
+      source(src="video/cooperation1.webm" type="video/webm")
   .hero__content(data-aos="fade-up")
-    .container
+    .container.container--team
       .hero__subtitle Контактное производство
       .hero__title Создавая продукт, Мы создаем ценность для наших Партнеров!
