remove lazy from swiper

--- a/src/components/production/_info.pug
+++ b/src/components/production/_info.pug
@@ -50,9 +50,9 @@
     .production__slider(js-slider)
       .swiper-wrapper
         .swiper-slide.production__slide
-          img(js-lazy data-src='img/productionSlider1.jpg' data-srcset='img/productionSlider1@2x.jpg 2x')
+          img(src='img/productionSlider1.jpg' srcset='img/productionSlider1@2x.jpg 2x')
         .swiper-slide.production__slide
-          img(js-lazy data-src='img/productionSlider1.jpg' data-srcset='img/productionSlider1@2x.jpg 2x')
+          img(src='img/productionSlider1.jpg' srcset='img/productionSlider1@2x.jpg 2x')
       .slider-arrow.slider-next
       .slider-arrow.slider-prev
   .production__information
