--- a/src/components/history/_history.pug
+++ b/src/components/history/_history.pug
@@ -19,7 +19,7 @@
           a(href="#" data-for-section="11") 2019
   section(data-section="0")
     .container
-      .history__row
+      .history__row.history__row--mt0
         .history__image(data-aos="blur")
           .history__image-container(js-teleport data-teleport-to="image-mobile1" data-teleport-condition="<768" style="max-width: 85%")
             img(src='img/historyImg1_1.jpg' srcset='img/historyImg1_1@2x.jpg 2x')
