--- a/src/components/history/_history.sass
+++ b/src/components/history/_history.sass
@@ -118,6 +118,8 @@
     &__row
       margin: 44px 0 0
       flex-direction: column
+      &--mt0
+        margin-top: 0
       &--reverse
         .history__info
           margin: 0
