--- a/src/components/today/_today.pug
+++ b/src/components/today/_today.pug
@@ -9,7 +9,7 @@
           |  является главным игроком на российском рынке бытовых изделий из пластмасс.
         p.today__sub-title(data-aos="fade-up") Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу. В круг наших постоянных клиентов и партнеров входят крупнейшие сети России и ближнего зарубежья
       .today__image
-        img(src='img/todayInfo2.png' srcset='img/todayInfo2@2x.png 2x')
+        img(src='img/todayInfo.png' srcset='img/todayInfo@2x.png 2x')
 
     p.today__section(data-aos="fade-up") Сегодня мы
     .today__row
