--- a/src/pug/shared/_layout.pug
+++ b/src/pug/shared/_layout.pug
@@ -9,14 +9,16 @@ html(lang="en")
     #barba-wrapper
       block header
         include ../../components/header/_header
-    
+
       // what should be changed with every pjax
       .page(class=outClass)
         .page__content
+          a#section-top(href="#")
+          a.scroll-top(href="#section-top")
           block content
 
         block footer
           include ../../components/footer/_footer
-          
+
       block scripts
         include _scripts
