--- a/src/components/brands/_brands.sass
+++ b/src/components/brands/_brands.sass
@@ -1,23 +1,16 @@
 // BRANDS
 .brands
-  padding: 70px 0 175px
+  padding: 70px 0 112px
   background: #fff
   position: relative
   overflow: hidden
-  // &--hover
-  //   *
-  //     color: #fff !important
-  //   .brand-card__image--color
-  //     display: none
-  //   .brand-card__image-hover
-  //     display: block
   &__bg
     position: absolute 0
     z-index: 1
     display: flex
     flex-direction: column
     font-size: 0
-    transition: all 0.75s $ease
+    transition: all 0.6s $ease
     opacity: 0
     // &.is-active
     //   opacity: 1
@@ -35,7 +28,7 @@
     line-height: 1.3
     text-align: center
     margin-bottom: 24px
-    transition: all 0.75s $ease
+    transition: all 0.3s $ease
   &__wrapper
     display: flex
     margin: -10px
@@ -50,9 +43,15 @@
     display: flex
     flex-direction: column
   .btn
-    display: none
-    max-width: 115px
+    // display: none
+    max-width: 163px
+    opacity: 0
+    pointer-events: none
+    font-size: 16px
+    line-height: 1.5
+    padding: 12px 24px
     margin: 15px auto 0
+    transition: all 0.5s $ease
 
   &__content
     position: relative
@@ -67,6 +66,7 @@
   max-width: 365px
   margin: 0 auto
   position: relative
+  transition: all 0.5s $ease
   &__image
     flex: 0 0 auto
     padding-bottom: 35px
@@ -83,6 +83,7 @@
     line-height: 1.55
     text-align: center
     color: #4F4F4F
+    transition: all 0.3s $ease
   // &:hover
     // margin-top: -49px
     // .btn
@@ -90,7 +91,7 @@
 
 +r($hd)
   .brands
-    padding: 70px 0 105px
+    padding: 70px 0 40px
   // brand card
   .brand-card
     &__image
@@ -109,6 +110,15 @@
     &__col
       flex: 0 0 42%
       max-width: 42%
+    .btn
+      display: inline-block
+      max-width: 115px
+      margin: 15px auto 0
+      font-size: 12px
+      line-height: 1.3
+      padding: 8px 14px
+      opacity: 1
+      pointer-events: all
 
   .brand-card
     &__image
@@ -118,7 +128,7 @@
       .ico
         font-size: 75px
 
-+rmin($lg)
++rmin($xl)
   .brands
     &--hover
       *
@@ -133,9 +143,11 @@
 
   .brand-card
     &:hover
-      margin-top: -49px
+      transform: translateY(-49px)
+      // margin-top: -49px
       .btn
-        display: inline-block
+        opacity: 1
+        pointer-events: all
 
 +r($lg)
   .brands
@@ -144,10 +156,6 @@
       font-size: 20px
       line-height: 26px
       margin-bottom: 5px
-    .btn
-      display: inline-block
-      max-width: 115px
-      margin: 15px auto 0
 
   .brand-card
     &__description
