--- a/src/components/homepage/_products.sass
+++ b/src/components/homepage/_products.sass
@@ -69,7 +69,7 @@
     flex-direction: column
     left: 24px
     top: -110px
-    border: 1px solid #F2F2F2
+    // border: 1px solid #F2F2F2
     background: white
     border-radius: 4px
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15)
