--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -92,6 +92,58 @@ body, html
     padding-left: 16px
     padding-right: 16px
 
+.scroll-top
+  position: fixed
+  display: block
+  width: 48px
+  height: 48px
+  font-size: 0
+  border-radius: 50%
+  background: #fff
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15)
+  left: 32px
+  bottom: -50px
+  z-index: 5
+  transition: all 0.75s $ease
+  &::before
+    position: absolute
+    display: block
+    content: ''
+    width: 14px
+    height: 14px
+    border: 3px solid #202020
+    top: 58%
+    left: 50%
+    transform: translate(-50%, -50%) rotate(45deg)
+    border-right: none
+    border-bottom: none
+  &.is-visible
+    bottom: 15%
+
++r($xl)
+  .scroll-top
+    width: 40px
+    height: 40px
+    left: 20px
+    &::before
+      width: 10px
+      height: 10px
+
++r($md)
+  .scroll-top
+    width: 32px
+    height: 32px
+    left: auto
+    right: 16px
+    transition: all 0.5s $ease
+    &::before
+      width: 8px
+      height: 8px
+      border-width: 2px
+    &.is-visible
+      bottom: 50px
+
+
 // REMOVE FOR PRODUCTION !
 .dev-bp-debug
   background: black
