--- a/src/components/cooperation/_map.sass
+++ b/src/components/cooperation/_map.sass
@@ -43,7 +43,7 @@
     border-radius: 8px
     display: flex
     flex-direction: column
-    max-width: 215px
+    max-width: 220px
     // display: none
     &-title
       font-size: 20px
@@ -58,6 +58,9 @@
         font-size: 16px
         line-height: 21px
         margin: 0
+        span
+          font-size: 12px
+          display: block
     &-image
       margin-right: 12px
       width: 67px
@@ -111,6 +114,8 @@
         p
           font-size: 12px
           line-height: 18px
+          span
+            font-size: 9px
       &-image
         width: 40px
         min-width: 40px
