--- a/src/components/separator/_separator.sass
+++ b/src/components/separator/_separator.sass
@@ -13,6 +13,7 @@
     left: -100px
     font-size: 0
     transform: translateY(0px)
+    transform-origin: center bottom
     transition: transform .25s $ease
     img
       max-width: 100%
@@ -25,7 +26,7 @@
   &:hover
     .separator
       &__image
-        transform: translateY(-10px)
+        transform: scale(1.02)
 
 +r($lg)
   .separator
