--- a/src/components/cooperation/_info.pug
+++ b/src/components/cooperation/_info.pug
@@ -13,7 +13,11 @@
           span  строгий контроль качества, регулярная актуализация внешнего вида изделий для соответствия текущим вкусам потребителей
           | , неснижаемый складской запас для бесперебойных регулярных отгрузок.
       .cooperation__image(data-aos="fade-up")
-        img(js-lazy data-src='img/cooperationImg1.jpg' data-srcset='img/cooperationImg1@2x.jpg 2x')
+        //- img(js-lazy data-src='img/cooperationImg1.jpg' data-srcset='img/cooperationImg1@2x.jpg 2x')
+        .cooperation__video
+          video(muted loop autoplay poster="img/heroBackground_1.jpg")
+            source(src="video/prod1.mp4" type="video/mp4")
+            source(src="video/prod1.webm" type="video/webm")
     .cooperation__row.cooperation__row--reverse
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
@@ -25,7 +29,11 @@
           span  набор разнообразных технологий изготовления изделий из пластмассы
           |  (в том числе, двухкомпонентное литье, литье изделий сложной конфигурации, нанесение рисунков на изделия).
       .cooperation__image(data-aos="fade-up")
-        img(js-lazy data-src='img/cooperationImg2.jpg' data-srcset='img/cooperationImg2@2x.jpg 2x')
+        //- img(js-lazy data-src='img/cooperationImg2.jpg' data-srcset='img/cooperationImg2@2x.jpg 2x')
+        .cooperation__video
+          video(muted loop autoplay poster="img/heroBackground_1.jpg")
+            source(src="video/prod1.mp4" type="video/mp4")
+            source(src="video/prod1.webm" type="video/webm")
 
 .cooperation__advantages
   .container.container--team
